fix spacing

--- a/pacific.css
+++ b/pacific.css
@@ -31,7 +31,13 @@ body {
 }
 h1 {
 	background-color: #000033;
+	background-image: url("sunset.jpg");
+	background-repeat: no-repeat;
+	background-position: right;
 	color: white;
+	padding: 10px;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 h2 {
 	color: #3399CC;
@@ -44,17 +50,18 @@ h2 {
 	background-color: white;
 	margin-left: auto;
 	margin-right: auto;	
-	max-width: 760px;
+	max-width: 800px;
+	width: fit-content;
 	display:grid;
 	grid-template-columns: 160px 80%;
-	column-gap: 10px;
+	/*column-gap: 10px;*/
+	/*overflow: hidden;*/
 }
-a{
-	text-decoration: none;
-}
+
 /*header*/
 header{
 	grid-column: 1/3;
+	width: 100%;	
 }
 /* Nav Bar */
 nav{
@@ -63,11 +70,12 @@ nav{
 	grid-row: 2/4;;
 }
 nav ul {
-	font-size: 1.2em;
-	list-style-type: none;
+	list-style: none;
+	padding-left: 15px;
 }
 nav a{
     color:  #000033;
+	text-decoration: none;
 	font-weight: bold;
 	text-align: right; /*fixme*/
 
@@ -80,14 +88,23 @@ nav a:hover {
 /* Main Content */
 #content{
 	color: #000;
+	padding-left: 25px;
+	padding-right: 25px;
+}
+
+img {
+  	/*float: left;*/
+	margin-right: 25px;
 }
 
 .resort{
-	font-size: 1.3em;
+	/*font-size: 1.3em;*/
+	font-weight: bold;
 	color: #134673;
 }
 #content ul{
 	list-style-image: url('marker.gif');
+	list-style-position: inside;
 }
 
 #contact {
@@ -101,13 +118,16 @@ dt {
 footer {
 	font-family: Georgia, "Times New Roman", serif;
 	font-style: italic;
+	font-size: 80%;
+	margin-top: 50px;
+	margin-left: 15px;
+	margin-bottom: 15px;
 	
 }
 
 footer a{
 	font-style: normal; /*fixme messy way to italize*/
 }
-
 
 
 
